[package]
name = "datazoo"
authors = ["Nicola Papale"]
description = "Collection of bit-twiddling and game-dev datastructures"
license = "MIT OR Apache-2.0 OR Zlib"
readme = "README.md"
keywords = ["multimap", "bitmap", "jagged array", "enummultimap"]
categories = ["data-structures"]
repository = "https://github.com/nicopap/datazoo"
version = "0.1.0"
edition = "2021"
